fix proj list overflow bug

--- a/src/renderer/assets/styles/app.less
+++ b/src/renderer/assets/styles/app.less
@@ -44,7 +44,7 @@ body{
 
   &-division{
     position: absolute;
-    width: 176px;
+    width: 175px;
     height: 39px;
     top: 0;
     left: 0;
