--- a/src/renderer/assets/styles/other-page.less
+++ b/src/renderer/assets/styles/other-page.less
@@ -103,8 +103,8 @@
   top: 40px;
   bottom: 0;
   background-color: #fff;
-  border-left: 1px solid #ddd;
-  border-right: 1px solid #ddd;
+  /*border-left: 1px solid #ddd;*/
+  /*border-right: 1px solid #ddd;*/
 
   &-sider{
     display: flex;
